tests/gen/testdata/configs/fail/region_short_name_missing_region.jsonnet
{
  region_short_name: 'phx',
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      shared_project_network: { network: { vcn: '10.0.64.0/21' } },
      projects: { proj1: {} },
    },
  },
}
